# ponychart-classifier

./: .gitignore  CLAUDE.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: publish.yml
app/label_images/: __main__.py  analysis.py  app.py  checkpoint_viewer.py  constants.py  crop_handler.py  file_ops.py  filter_builder.py  label_store.py  navigator.py
scripts/: analyze_augmentations.py  analyze_distribution.py  compare_backbones.py  compare_crops.py  compare_pos_weight.py  compare_resolution.py  compare_resume_scratch.py  evaluate_holdout.py  inspect_checkpoint.py  label_images.py  learning_curve.py  profile_dataloader.py  search_batch_lr.py  train.py
src/ponychart_classifier/: __init__.py  _http.py  inference.py  model_spec.py
src/ponychart_classifier/training/: __init__.py  constants.py  dataset.py  device.py  export.py  log_helpers.py  model.py  sampling.py  script_utils.py  splitting.py  training.py
