[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ponychart-classifier"
version = "0.3.13"
description = "Multi-label image classifier for PonyChart character identification."
readme = "README.md"
authors = [{ name = "Kuan-Lun Wang" }]
license = { text = "GNU Affero General Public License v3" }
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "onnxruntime>=1.24.4",
    "certifi>=2026.2.25; sys_platform == 'darwin'",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
train = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "scikit-learn>=1.8.0",
    "onnx>=1.21.0rc4",
    "onnxscript>=0.6.2",
    "flask>=3.1.3",
    "psutil>=7.2.2",
    "Pillow>=12.1.1",
]
publish = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/Kuan-Lun/ponychart-classifier"
Tracker = "https://github.com/Kuan-Lun/ponychart-classifier/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ponychart_classifier" = [
    "py.typed",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
