[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ponychart-classifier"
version = "0.3.15"
description = "Multi-label image classifier for PonyChart character identification."
readme = "README.md"
authors = [{ name = "Kuan-Lun Wang" }]
license = { text = "GNU Affero General Public License v3" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "onnxruntime>=1.24.4",
    "certifi>=2026.2.25; sys_platform == 'darwin'",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
train = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "scikit-learn>=1.8.0",
    "onnx>=1.20.1",
    "onnxscript>=0.6.2",
    "flask>=3.1.3",
    "psutil>=7.2.2",
    "Pillow>=12.1.1",
]
[project.urls]
Homepage = "https://github.com/Kuan-Lun/ponychart-classifier"
Tracker = "https://github.com/Kuan-Lun/ponychart-classifier/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ponychart_classifier"]

[tool.hatch.build.targets.wheel.force-include]
"src/ponychart_classifier/model.onnx" = "ponychart_classifier/model.onnx"
"src/ponychart_classifier/thresholds.json" = "ponychart_classifier/thresholds.json"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
